--- a/views/artworks.jade
+++ b/views/artworks.jade
@@ -11,6 +11,15 @@ block body
     | --
     a(href="/#{japaname.code}") #{japaname.string} さんのページへ戻る
 
+
+    p 他のJapaname
+      form#other_japaname_form
+        input#other_japaname(type="text" name="other_japaname")
+        input#other_japaname_submit(type="submit" value="get other")
+
+        
+        
+
   if preview
     h1 プレビュー #{artwork.artwork_name} #{japaname.code} 
 
@@ -28,6 +37,7 @@ block body
             input(type="hidden" name="artwork_width" value="#{artwork_width}")
             input(type="submit" value="印刷する")
 
+  img(src="/thumbnail/direct/#{japaname.code}" width="500")
 
 
   
@@ -37,12 +47,23 @@ block body
   if(preview)
     div
       form(action="/purchases/#{artwork.artwork_name}/#{japaname.code}/" method="post")
-        input(type="submit" value="購入して印刷する")
+        input(type="submit" value="購入してサイズ調整して印刷する")
 
 block append body-end-scripts
   script(src="/javascripts/jquery.min.js" type="text/javascript")
   script(type="text/javascript" src="/javascripts/snap.svg-min.js")
   - var share_url = "http://japaname.jp/" + japaname.code;
+
+  script(type="text/javascript").
+    $(function(){
+      $("#other_japaname_form").submit(function(e){
+        e.preventDefault();
+        var japaname_code = $("#other_japaname").val();
+        var url = "/shops/arton/artworks/#{artwork.artwork_name}/"+japaname_code+"";
+        window.location = url;
+      });
+    });
+
 
   script(type="text/javascript").
     var artwork_name = "#{artwork.artwork_name}";
@@ -59,7 +80,6 @@ block append body-end-scripts
     script(type="text/javascript").
       setTimeout(function(){
         window.print();
-
       },1000);
 
   script(type="text/javascript" src="https://use.typekit.net/yjx8eou.js")
