--- a/views/artworks.ejs/risumaru_ofuda.ejs
+++ b/views/artworks.ejs/risumaru_ofuda.ejs
@@ -939,7 +939,7 @@
 
     var chara_y = y + char_height/2 + (index ) * (char_height + char_margin);
 %>
-    <text x="<%=x %>" y="<%=chara_y %>" class="st7" style="font-size: <%= char_height %>px;fill: rgb(0,0,0);" text-anchor="middle" dominant-baseline="top"><%= chara %></text>
+    <text x="<%=x %>" y="<%=chara_y %>" class="st5" style="font-size: <%= char_height %>px;fill: rgb(0,0,0);" text-anchor="middle" dominant-baseline="top"><%= chara %></text>
 <% } %>
   </g>
 
@@ -951,4 +951,8 @@
 
 	<text id="japaname_url" transform="matrix(1 0 0 1 -171.5469 545.4196)" class="st7 st8"><%=japaname.code%></text>
 </g>
+
+<script src="https://use.typekit.net/yjx8eou.js" type="text/javascript"></script>
+<script  type="text/javascript">try{Typekit.load({ async: true });}catch(e){alert(e)}</script>
+
 </svg>
