--- a/views/include/ateji_box.jade
+++ b/views/include/ateji_box.jade
@@ -25,11 +25,4 @@ mixin ateji_box(atejis)
                 | #{meaning}
                 br
 
-        //
-          tr.hiragana
-            th Hiragana
-            td(colspan="#{atejis.length}") #{hiragana}
-          tr.katakana
-            th Katakana
-            td(colspan="#{atejis.length}") #{katakana}
-
+    img(src="/images/risumaru_jump_left.png" style="height:50mm;margin-right:-20mm")
