--- a/views/artworks.jade
+++ b/views/artworks.jade
@@ -37,8 +37,6 @@ block body
             input(type="hidden" name="artwork_width" value="#{artwork_width}")
             input(type="submit" value="印刷する")
 
-  img(src="/thumbnail/direct/#{japaname.code}" width="500")
-
 
   
   div(style="text-align:center ;")
@@ -64,16 +62,10 @@ block append body-end-scripts
       });
     });
 
-
   script(type="text/javascript").
     var artwork_name = "#{artwork.artwork_name}";
-    var variables = {
-      japaname_string:"#{japaname.names[0].ateji.string}",
-      japaname_code:  "#{japaname.code}",
-      japaname_url:   "#{japaname.code}",
-      original_name:  "#{japaname.names[0].original}",
-      qrcode_url  :   "http://chart.apis.google.com/chart?cht=qr&chld=L|0&chs=150x150&chl=#{share_url}"
-    };
+    var japaname_code= "#{japaname.code}";
+
   script(type="text/javascript" src="/javascripts/artworks.js")
 
   if print
