--- a/scss/main.scss
+++ b/scss/main.scss
@@ -23,6 +23,8 @@
 
 //BEMS モジュール
 @import "jnSearchBox";
+@import "shopThumbs";
+@import "teeComposite";
 
 ///////////// pages /////////////////
 //だんだん↑に移動していくべきだと思う
