--- a/scss/base/_grid-settings.scss
+++ b/scss/base/_grid-settings.scss
@@ -10,6 +10,7 @@
 $medium-screen: 600px;
 $large-screen: 900px;
 
+$medium-screen-down: new-breakpoint(max-width $medium-screen 4);
 $medium-screen-up: new-breakpoint(min-width $medium-screen 4);
 $large-screen-up: new-breakpoint(min-width $large-screen 12);
 
