--- a/views/artworks.ejs/risumaru_ofuda.ejs
+++ b/views/artworks.ejs/risumaru_ofuda.ejs
@@ -850,76 +850,11 @@
 		</g>
 	</g>
 </g>
-<g id="url" class="st10">
-  <path d="M-217.7,545.4v-4h0.5v1.4c0.2-0.3,0.5-0.4,0.9-0.4c0.2,0,0.4,0,0.6,0.1s0.3,0.2,0.3,0.4s0.1,0.4,0.1,0.7v1.8h-0.5v-1.8
-    c0-0.2-0.1-0.4-0.2-0.5c-0.1-0.1-0.3-0.2-0.5-0.2c-0.1,0-0.3,0-0.4,0.1c-0.1,0.1-0.2,0.2-0.3,0.3c-0.1,0.1-0.1,0.3-0.1,0.5v1.6
-    H-217.7z"/>
-  <path d="M-213.5,545l0.1,0.4c-0.1,0-0.3,0-0.4,0c-0.2,0-0.3,0-0.4-0.1c-0.1-0.1-0.2-0.1-0.2-0.2c0-0.1-0.1-0.3-0.1-0.6v-1.7h-0.4
-    v-0.4h0.4v-0.7l0.5-0.3v1h0.5v0.4h-0.5v1.7c0,0.1,0,0.2,0,0.3c0,0,0,0.1,0.1,0.1s0.1,0,0.2,0C-213.6,545-213.6,545-213.5,545z"/>
-  <path d="M-211.9,545l0.1,0.4c-0.1,0-0.3,0-0.4,0c-0.2,0-0.3,0-0.4-0.1c-0.1-0.1-0.2-0.1-0.2-0.2c0-0.1-0.1-0.3-0.1-0.6v-1.7h-0.4
-    v-0.4h0.4v-0.7l0.5-0.3v1h0.5v0.4h-0.5v1.7c0,0.1,0,0.2,0,0.3c0,0,0,0.1,0.1,0.1s0.1,0,0.2,0C-212.1,545-212,545-211.9,545z"/>
-  <path d="M-211.4,546.5v-4h0.4v0.4c0.1-0.1,0.2-0.3,0.4-0.3c0.1-0.1,0.3-0.1,0.5-0.1c0.2,0,0.5,0.1,0.7,0.2
-    c0.2,0.1,0.3,0.3,0.4,0.5c0.1,0.2,0.1,0.5,0.1,0.8c0,0.3-0.1,0.6-0.2,0.8c-0.1,0.2-0.3,0.4-0.5,0.5c-0.2,0.1-0.4,0.2-0.6,0.2
-    c-0.2,0-0.3,0-0.4-0.1s-0.2-0.2-0.3-0.3v1.4H-211.4z M-211,544c0,0.4,0.1,0.7,0.2,0.8s0.3,0.3,0.5,0.3c0.2,0,0.4-0.1,0.6-0.3
-    c0.2-0.2,0.2-0.5,0.2-0.9c0-0.4-0.1-0.6-0.2-0.8c-0.2-0.2-0.3-0.3-0.5-0.3c-0.2,0-0.4,0.1-0.6,0.3C-210.9,543.3-211,543.6-211,544
-    z"/>
-  <path d="M-208.2,543.1v-0.6h0.6v0.6H-208.2z M-208.2,545.4v-0.6h0.6v0.6H-208.2z"/>
-  <path d="M-207.1,545.5l1.2-4.1h0.4l-1.2,4.1H-207.1z"/>
-  <path d="M-205.6,545.5l1.2-4.1h0.4l-1.2,4.1H-205.6z"/>
-  <path d="M-204.3,546.5l0.1-0.4c0.1,0,0.2,0,0.2,0c0.1,0,0.2,0,0.2-0.1c0-0.1,0.1-0.2,0.1-0.5v-3.1h0.5v3.1c0,0.4,0,0.6-0.1,0.7
-    c-0.1,0.2-0.3,0.3-0.6,0.3C-204,546.6-204.2,546.6-204.3,546.5z M-203.7,542v-0.6h0.5v0.6H-203.7z"/>
-  <path d="M-200.5,545.1c-0.2,0.2-0.4,0.3-0.5,0.3c-0.2,0.1-0.4,0.1-0.5,0.1c-0.3,0-0.6-0.1-0.7-0.2c-0.2-0.2-0.3-0.4-0.3-0.6
-    c0-0.1,0-0.3,0.1-0.4c0.1-0.1,0.1-0.2,0.3-0.3c0.1-0.1,0.2-0.1,0.4-0.2c0.1,0,0.2,0,0.4-0.1c0.4,0,0.7-0.1,0.9-0.2
-    c0-0.1,0-0.1,0-0.1c0-0.2,0-0.3-0.1-0.4c-0.1-0.1-0.3-0.2-0.6-0.2c-0.2,0-0.4,0-0.5,0.1s-0.2,0.2-0.2,0.4l-0.5-0.1
-    c0-0.2,0.1-0.4,0.2-0.5c0.1-0.1,0.2-0.2,0.4-0.3c0.2-0.1,0.4-0.1,0.7-0.1c0.2,0,0.4,0,0.6,0.1c0.2,0.1,0.3,0.1,0.3,0.2
-    c0.1,0.1,0.1,0.2,0.2,0.3c0,0.1,0,0.2,0,0.5v0.7c0,0.5,0,0.7,0,0.9c0,0.1,0.1,0.2,0.1,0.3h-0.5
-    C-200.5,545.3-200.5,545.2-200.5,545.1z M-200.6,544c-0.2,0.1-0.4,0.1-0.8,0.2c-0.2,0-0.3,0.1-0.4,0.1c-0.1,0-0.1,0.1-0.2,0.2
-    c0,0.1-0.1,0.1-0.1,0.2c0,0.1,0,0.2,0.1,0.3c0.1,0.1,0.2,0.1,0.4,0.1c0.2,0,0.4,0,0.5-0.1s0.3-0.2,0.3-0.3
-    c0.1-0.1,0.1-0.3,0.1-0.5V544z"/>
-  <path d="M-199.3,546.5v-4h0.4v0.4c0.1-0.1,0.2-0.3,0.4-0.3c0.1-0.1,0.3-0.1,0.5-0.1c0.2,0,0.5,0.1,0.7,0.2
-    c0.2,0.1,0.3,0.3,0.4,0.5c0.1,0.2,0.1,0.5,0.1,0.8c0,0.3-0.1,0.6-0.2,0.8c-0.1,0.2-0.3,0.4-0.5,0.5c-0.2,0.1-0.4,0.2-0.6,0.2
-    c-0.2,0-0.3,0-0.4-0.1s-0.2-0.2-0.3-0.3v1.4H-199.3z M-198.9,544c0,0.4,0.1,0.7,0.2,0.8s0.3,0.3,0.5,0.3c0.2,0,0.4-0.1,0.6-0.3
-    c0.2-0.2,0.2-0.5,0.2-0.9c0-0.4-0.1-0.6-0.2-0.8c-0.2-0.2-0.3-0.3-0.5-0.3c-0.2,0-0.4,0.1-0.6,0.3
-    C-198.8,543.3-198.9,543.6-198.9,544z"/>
-  <path d="M-194.3,545.1c-0.2,0.2-0.4,0.3-0.5,0.3c-0.2,0.1-0.4,0.1-0.5,0.1c-0.3,0-0.6-0.1-0.7-0.2c-0.2-0.2-0.3-0.4-0.3-0.6
-    c0-0.1,0-0.3,0.1-0.4c0.1-0.1,0.1-0.2,0.3-0.3c0.1-0.1,0.2-0.1,0.4-0.2c0.1,0,0.2,0,0.4-0.1c0.4,0,0.7-0.1,0.9-0.2
-    c0-0.1,0-0.1,0-0.1c0-0.2,0-0.3-0.1-0.4c-0.1-0.1-0.3-0.2-0.6-0.2c-0.2,0-0.4,0-0.5,0.1s-0.2,0.2-0.2,0.4l-0.5-0.1
-    c0-0.2,0.1-0.4,0.2-0.5c0.1-0.1,0.2-0.2,0.4-0.3c0.2-0.1,0.4-0.1,0.7-0.1c0.2,0,0.4,0,0.6,0.1c0.2,0.1,0.3,0.1,0.3,0.2
-    c0.1,0.1,0.1,0.2,0.2,0.3c0,0.1,0,0.2,0,0.5v0.7c0,0.5,0,0.7,0,0.9c0,0.1,0.1,0.2,0.1,0.3h-0.5
-    C-194.2,545.3-194.3,545.2-194.3,545.1z M-194.3,544c-0.2,0.1-0.4,0.1-0.8,0.2c-0.2,0-0.3,0.1-0.4,0.1c-0.1,0-0.1,0.1-0.2,0.2
-    c0,0.1-0.1,0.1-0.1,0.2c0,0.1,0,0.2,0.1,0.3c0.1,0.1,0.2,0.1,0.4,0.1c0.2,0,0.4,0,0.5-0.1s0.3-0.2,0.3-0.3
-    c0.1-0.1,0.1-0.3,0.1-0.5V544z"/>
-  <path d="M-193.1,545.4v-2.9h0.4v0.4c0.2-0.3,0.5-0.5,0.9-0.5c0.2,0,0.3,0,0.5,0.1c0.1,0.1,0.3,0.1,0.3,0.2
-    c0.1,0.1,0.1,0.2,0.2,0.4c0,0.1,0,0.3,0,0.5v1.8h-0.5v-1.8c0-0.2,0-0.4-0.1-0.5c0-0.1-0.1-0.2-0.2-0.2c-0.1-0.1-0.2-0.1-0.3-0.1
-    c-0.2,0-0.4,0.1-0.5,0.2s-0.2,0.4-0.2,0.8v1.6H-193.1z"/>
-  <path d="M-188.1,545.1c-0.2,0.2-0.4,0.3-0.5,0.3c-0.2,0.1-0.4,0.1-0.5,0.1c-0.3,0-0.6-0.1-0.7-0.2c-0.2-0.2-0.3-0.4-0.3-0.6
-    c0-0.1,0-0.3,0.1-0.4c0.1-0.1,0.1-0.2,0.3-0.3c0.1-0.1,0.2-0.1,0.4-0.2c0.1,0,0.2,0,0.4-0.1c0.4,0,0.7-0.1,0.9-0.2
-    c0-0.1,0-0.1,0-0.1c0-0.2,0-0.3-0.1-0.4c-0.1-0.1-0.3-0.2-0.6-0.2c-0.2,0-0.4,0-0.5,0.1s-0.2,0.2-0.2,0.4l-0.5-0.1
-    c0-0.2,0.1-0.4,0.2-0.5c0.1-0.1,0.2-0.2,0.4-0.3c0.2-0.1,0.4-0.1,0.7-0.1c0.2,0,0.4,0,0.6,0.1c0.2,0.1,0.3,0.1,0.3,0.2
-    c0.1,0.1,0.1,0.2,0.2,0.3c0,0.1,0,0.2,0,0.5v0.7c0,0.5,0,0.7,0,0.9c0,0.1,0.1,0.2,0.1,0.3h-0.5C-188,545.3-188,545.2-188.1,545.1z
-     M-188.1,544c-0.2,0.1-0.4,0.1-0.8,0.2c-0.2,0-0.3,0.1-0.4,0.1c-0.1,0-0.1,0.1-0.2,0.2c0,0.1-0.1,0.1-0.1,0.2c0,0.1,0,0.2,0.1,0.3
-    c0.1,0.1,0.2,0.1,0.4,0.1c0.2,0,0.4,0,0.5-0.1s0.3-0.2,0.3-0.3c0.1-0.1,0.1-0.3,0.1-0.5V544z"/>
-  <path d="M-186.8,545.4v-2.9h0.4v0.4c0.1-0.1,0.2-0.3,0.4-0.3c0.2-0.1,0.3-0.1,0.5-0.1c0.2,0,0.4,0,0.5,0.1
-    c0.1,0.1,0.2,0.2,0.3,0.4c0.2-0.3,0.5-0.5,0.9-0.5c0.3,0,0.5,0.1,0.7,0.2c0.2,0.2,0.2,0.4,0.2,0.7v2h-0.5v-1.8c0-0.2,0-0.3,0-0.4
-    c0-0.1-0.1-0.2-0.2-0.2c-0.1-0.1-0.2-0.1-0.3-0.1c-0.2,0-0.4,0.1-0.5,0.2c-0.1,0.1-0.2,0.4-0.2,0.7v1.7h-0.5v-1.9
-    c0-0.2,0-0.4-0.1-0.5c-0.1-0.1-0.2-0.2-0.4-0.2c-0.1,0-0.3,0-0.4,0.1c-0.1,0.1-0.2,0.2-0.3,0.3c-0.1,0.1-0.1,0.3-0.1,0.6v1.5
-    H-186.8z"/>
-  <path d="M-180.2,544.5l0.5,0.1c-0.1,0.3-0.2,0.5-0.4,0.7c-0.2,0.2-0.5,0.2-0.8,0.2c-0.4,0-0.8-0.1-1-0.4s-0.4-0.6-0.4-1.1
-    c0-0.5,0.1-0.9,0.4-1.1c0.3-0.3,0.6-0.4,1-0.4c0.4,0,0.7,0.1,1,0.4c0.2,0.3,0.4,0.6,0.4,1.1c0,0,0,0.1,0,0.1h-2.2
-    c0,0.3,0.1,0.6,0.3,0.7c0.2,0.2,0.4,0.3,0.6,0.3c0.2,0,0.3,0,0.5-0.1C-180.4,544.8-180.3,544.7-180.2,544.5z M-181.8,543.7h1.6
-    c0-0.2-0.1-0.4-0.2-0.5c-0.2-0.2-0.4-0.3-0.6-0.3c-0.2,0-0.4,0.1-0.6,0.2C-181.7,543.2-181.8,543.4-181.8,543.7z"/>
-  <path d="M-178.9,545.4v-0.6h0.6v0.6H-178.9z"/>
-  <path d="M-178.1,546.5l0.1-0.4c0.1,0,0.2,0,0.2,0c0.1,0,0.2,0,0.2-0.1c0-0.1,0.1-0.2,0.1-0.5v-3.1h0.5v3.1c0,0.4,0,0.6-0.1,0.7
-    c-0.1,0.2-0.3,0.3-0.6,0.3C-177.9,546.6-178,546.6-178.1,546.5z M-177.5,542v-0.6h0.5v0.6H-177.5z"/>
-  <path d="M-176.3,546.5v-4h0.4v0.4c0.1-0.1,0.2-0.3,0.4-0.3c0.1-0.1,0.3-0.1,0.5-0.1c0.2,0,0.5,0.1,0.7,0.2
-    c0.2,0.1,0.3,0.3,0.4,0.5c0.1,0.2,0.1,0.5,0.1,0.8c0,0.3-0.1,0.6-0.2,0.8c-0.1,0.2-0.3,0.4-0.5,0.5c-0.2,0.1-0.4,0.2-0.6,0.2
-    c-0.2,0-0.3,0-0.4-0.1s-0.2-0.2-0.3-0.3v1.4H-176.3z M-175.8,544c0,0.4,0.1,0.7,0.2,0.8s0.3,0.3,0.5,0.3c0.2,0,0.4-0.1,0.6-0.3
-    c0.2-0.2,0.2-0.5,0.2-0.9c0-0.4-0.1-0.6-0.2-0.8c-0.2-0.2-0.3-0.3-0.5-0.3c-0.2,0-0.4,0.1-0.6,0.3
-    C-175.7,543.3-175.8,543.6-175.8,544z"/>
-  <path d="M-173.5,545.5l1.2-4.1h0.4l-1.2,4.1H-173.5z"/>
-</g>
+
+<text id="japaname_url_base" transform="matrix(1 0 0 1 -220 545.4196)" class="st7 st8">http://japaname.jp/</text>
+
 <g id="variables">
-  <g id="japaname_box" x="-155" y="350" height="125">
+  <g id="japaname_box">
 
 <% 
   var x=-155;
@@ -947,7 +882,7 @@
 	<text id="original_name" transform="matrix(1 0 0 1 -155.6575 482.1234)" class="st7 st9" text-anchor="middle"><%=japaname.original%></text>
 	<rect id="qrcode_container" x="-219.5" y="499" class="st1" width="41.2" height="41.2"/>
 
-  <image id="qrcode" x="-219.5" y="500.2" width="40" height="40" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="http://chart.apis.google.com/chart?cht=qr&amp;chld=L|0&amp;chs=150x150&amp;chl=aho %>"></image>
+  <image id="qrcode" x="-219.5" y="500.2" width="40" height="40" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="http://chart.apis.google.com/chart?cht=qr&amp;chld=L|0&amp;chs=150x150&amp;chl=<%=share_url%>"></image>
 
 	<text id="japaname_url" transform="matrix(1 0 0 1 -171.5469 545.4196)" class="st7 st8"><%=japaname.code%></text>
 </g>
