--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -57,6 +57,12 @@ h4,.h4{
   font-size:2.1rem;
 }
 
+.bottomLine{
+  padding-bottom:0;
+  border-bottom:1px solid;
+  line-height:1;
+}
+
 h1.n,
 h2.n,
 h3.n,
