--- a/scss/main.scss
+++ b/scss/main.scss
@@ -26,6 +26,13 @@
 @import "shopThumbs";
 @import "teeComposite";
 
+@import "shopHeader";
+@import "shopIcon";
+@import "shopDesc";
+@import "shopItems";
+@import "goToArton";
+
+
 ///////////// pages /////////////////
 //だんだん↑に移動していくべきだと思う
 @import "page-index"; 
@@ -54,9 +61,4 @@
   width: 100%;
   height: 100%;
 }
-
-
-
-
-
 
