--- a/scss/_goToArton.scss
+++ b/scss/_goToArton.scss
@@ -27,12 +27,25 @@ $gta:".goToArton";
 #{$gta}__item{
   margin-bottom:2em;
   @include media($medium-screen-down){
-    @include span-columns(1 of 2);
+    @include span-columns(2 of 4);
     @include omega(2n);
   }
   @include media($medium-screen-up){
-    @include span-columns(1 of 6);
+    @include span-columns(2 of 12);
     @include omega(6n);
+  }
+
+  &.insideShop{
+
+    @include media($medium-screen-down){
+      @include span-columns(4 of 4);
+      @include omega(1n);
+    }
+    @include media($medium-screen-up){
+      @include span-columns(6 of 12);
+      @include omega(2n);
+    }
+    
   }
 }
 
