--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -13,7 +13,7 @@ a.button {
   color: #fff;
   cursor: pointer;
   display: inline-block;
-  font-family: "Georgia", "Cambria", "Times New Roman", "Times", serif;
+  font-family: "Verdana", "Geneva", sans-serif;
   font-size: 1.6rem;
   -webkit-font-smoothing: antialiased;
   font-weight: 600;
@@ -47,7 +47,7 @@ input,
 label,
 select {
   display: block;
-  font-family: "Georgia", "Cambria", "Times New Roman", "Times", serif;
+  font-family: "Verdana", "Geneva", sans-serif;
   font-size: 1.6rem; }
   input.inline,
   label.inline,
@@ -69,7 +69,7 @@ select[multiple=multiple] {
   border-radius: 3px;
   box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.06);
   box-sizing: border-box;
-  font-family: "Georgia", "Cambria", "Times New Roman", "Times", serif;
+  font-family: "Verdana", "Geneva", sans-serif;
   font-size: 1.6rem;
   margin-bottom: 0.75em;
   padding: 0.5em;
@@ -161,17 +161,17 @@ table {
     vertical-align: middle; }
 
 html {
-  font-size: 46.875%; }
+  font-size: 62.5%; }
   @media screen and (min-width: 600px) {
     html {
-      font-size: 54.6875%; } }
+      font-size: 62.5%; } }
   @media screen and (min-width: 900px) {
     html {
       font-size: 62.5%; } }
 
 body {
   color: #333;
-  font-family: "Georgia", "Cambria", "Times New Roman", "Times", serif;
+  font-family: "Verdana", "Geneva", sans-serif;
   font-feature-settings: "kern", "liga", "pnum";
   font-size: 1.6rem;
   line-height: 1.5; }
@@ -182,7 +182,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Georgia", "Cambria", "Times New Roman", "Times", serif;
+  font-family: "Verdana", "Geneva", sans-serif;
   line-height: 1.2;
   margin: 0 0 0.75em; }
 
@@ -255,7 +255,6 @@ body.topbar-margin {
   background-position: 0px auto; }
 
 body {
-  font-family: "Georgia", "Cambria", "Times New Roman", "Times", serif;
   background-color: white;
   background-repeat: no-repeat;
   background-size: 100%; }
