--- a/scss/main.scss
+++ b/scss/main.scss
@@ -31,7 +31,7 @@
 @import "shopDesc";
 @import "shopItems";
 @import "goToArton";
-
+@import "japanameTable";
 
 ///////////// pages /////////////////
 //だんだん↑に移動していくべきだと思う
